--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "express-handlebars": "^7.1.3",
     "handlebars": "^4.7.8",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "nodemon": "^3.1.4"
   }
 }
