--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "handlebars": "^4.7.8",
+    "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "nodemon": "^3.1.4"
   }
